# b01lers-bot

./: .gitignore  Cargo.toml  README.md  b01lers_bot_solve_channel.html  b01lers_bot_solve_channel_trimmed.html  bot_todo  config.toml  config_testing.toml
migrations/: 20240704201937_competition.sql  20240707181601_users.sql  20240707194500_challenges.sql  20240707194500_solves.sql  20240707194520_solves.sql  20240707195129_user_solves.sql  20240902214134_challenge_channel.sql
src/: config.rs  email.rs  logging.rs  main.rs  points.rs
src/commands/: archive.rs  bingo.rs  challenge.rs  competition.rs  competitions.rs  misc.rs  mod.rs  solve.rs  stats.rs  verify.rs
src/db/: challenge.rs  competition.rs  mod.rs  solve.rs  user.rs
