[package]
name = "b01lers_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenvy = "0.15.7"
enumflags2 = "0.7.10"
image = "0.25.1"
imageproc = "0.25.0"
poise = "0.6.1"
serenity = "0.12.2"
sqlx = { version = "0.7.4", features = [ "macros", "sqlite", "runtime-tokio" ] }
strum = { version =  "0.26.3", features = [ "derive" ] }
tokio = { version = "1.38.0", features = [ "full" ] }
