[package]
name = "b01lers_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.16", features = ["derive"] }
dotenvy = "0.15.7"
email-address-parser = "2.0.0"
enumflags2 = "0.7.10"
image = "0.25.1"
imageproc = "0.25.0"
poise = "0.6.1"
reqwest = { version = "0.12.7", default-features = false, features = [ "charset", "rustls-tls" ] }
serde = "1.0.204"
serde_json = "1.0.120"
serenity = "0.12.2"
sqlx = { version = "0.7.4", features = [ "macros", "sqlite", "runtime-tokio" ] }
strum = { version =  "0.26.3", features = [ "derive" ] }
tokio = { version = "1.38.0", features = [ "full" ] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# TEMP
ron = "0.8.1"